--- a/index.html
+++ b/index.html
@@ -47,5 +47,60 @@
         </div>
       </div>
     </div>
+
+    <div class="wrapper-content content">
+      <aside class="profile">
+        <img class="avatar" src="/images/avatar.png" alt="Werner" />
+        <h1>Werner Romling</h1>
+        <span>@Exibit</span>
+        <p>
+          Biografia Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Iusto
+        </p>
+        <ul>
+          <li><img src="/images/place.svg" alt="Place" />Namur, Belgium</li>
+          <li><img src="/images/url.svg" alt="URL" />exibit.be</li>
+          <li><img src="/images/joined.svg" alt="Joined" />Joined June 2007</li>
+          <li>
+            <img src="images/born.svg" alt="Born" />Born the 20th of June 1978
+          </li>
+        </ul>
+        <div class="widget followers">
+          <strong>
+            <img src="/images/followers.svg" alt="followers" />73 followers that
+            you know
+          </strong>
+          <ul class="list">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+
+        <div class="widget images">
+          <strong>
+            <img src="/images/images.svg" alt="images" />266 Photos and Videos
+          </strong>
+          <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+      <section class="timeline">timeline</section>
+      <aside class="widgets">Widgets</aside>
+    </div>
   </body>
 </html>
