--- a/index.html
+++ b/index.html
@@ -83,24 +83,250 @@
             <li></li>
           </ul>
         </div>
-
         <div class="widget images">
           <strong>
             <img src="/images/images.svg" alt="images" />266 Photos and Videos
           </strong>
           <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </aside>
-      <section class="timeline">timeline</section>
-      <aside class="widgets">Widgets</aside>
+      <section class="timeline">
+        <nav>
+          <a href="" class="active">Tweet</a>
+          <a href="">Tweets and replies</a>
+          <a href="">Media</a>
+        </nav>
+        <ul class="tweets">
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Werner Romling <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Boa Morte <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Matheus Cruz <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Werner Romling <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Boa Morte <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Matheus Cruz <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Werner Romling <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Boa Morte <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Matheus Cruz <span>@Exibit</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+                totam, officia animi aspernatur nisi quae
+              </p>
+              <div class="actions">
+                <a href="">
+                  <img src="/images/comments.svg" alt="Comments" /> 3
+                </a>
+                <a href="">
+                  <img src="/images/retweet.svg" alt="Retweet" /> 4
+                </a>
+                <a href=""> <img src="/images/like.svg" alt="Like" /> 5 </a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <aside class="widgets">
+        <div class="widget follow">
+          <div class="title">
+            <strong>Who to Follow</strong>
+            <a href="">Refresh</a>
+            <a href="">View all</a>
+          </div>
+          <ul>
+            <li>
+              <div class="profile">
+                <img src="/images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong
+                    >Spade
+                    <span>@spade_be</span>
+                  </strong>
+                  <button>Follow</button>
+                </div>
+                <a href="">x</a>
+              </div>
+            </li>
+            <li>
+              <div class="profile">
+                <img src="/images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong
+                    >Spade
+                    <span>@spade_be</span>
+                  </strong>
+                  <button>Follow</button>
+                </div>
+                <a href="">x</a>
+              </div>
+            </li>
+            <li>
+              <div class="profile">
+                <img src="/images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong
+                    >Spade
+                    <span>@spade_be</span>
+                  </strong>
+                  <button>Follow</button>
+                </div>
+                <a href="">x</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </aside>
     </div>
   </body>
 </html>
